@startuml
' Packages
package "sprites" {
    class "Player"
    class "Enemy"
    class "Gem"
}

package "game_engine" {
    class "GameLoop"
    class "EventQueue"
    class "Clock"
    class "GameState"
    class "GameLogic"
}

package "utilities" {
    class "constants"
    class "ConfigManager"
    class "Score"
    class "ScoreManager"
}

package "ui" {
    class "image_handler"
    class "Renderer"
    class "UITextController"
    class "TextInputBox"
    class "TextObject"
    class "UIManager"
}

package "database" {
    class "ScoreService"
    class "database_connection"
}



' Relationships
Score <-- ScoreManager
ScoreService <-- ScoreManager
database_connection <-- ScoreService
ConfigManager <-- database_connection

TextObject <-- TextInputBox
TextObject <-- UITextController
ScoreManager <-- UITextController
UITextController <-- UIManager
TextInputBox <-- UIManager
UIManager <-- Renderer
image_handler <-- UIManager
image_handler <-- TextInputBox
image_handler <-- Player
image_handler <-- Enemy
image_handler <-- Gem

GameState <-- UITextController
GameState <-- UIManager
Player <-- GameState
Enemy <-- GameState
Gem <-- GameState
Player <-- GameLogic
Enemy <-- GameLogic

Renderer <-- GameLoop
Clock <-- GameLoop
EventQueue <-- GameLoop
GameLogic <-- GameLoop
GameState <-- GameLogic
@enduml
